--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -27,7 +27,7 @@
     <!-- в элементе с id="mocha" будут результаты тестов -->
     <div id="mocha"></div>
     <script src="../LinkedList.js"></script>
-    <script src="./tests.LinkedList.js"></script>
+    <script src="./LinkedList.tests.js"></script>
     <!-- запустить тесты! -->
     <script>
         mocha.run();
